# msueberkrueb_splunk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
src/load_data/: load.py
src/msueberkrueb_splunk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/splunk/: __init__.py  splunk.py
tests/load_data/: test_load_json.py
tests/splunk/: test_extract_data.py
