[metadata]
name = msueberkrueb_splunk
version = 2.0.1
author = Mike Süberkrüb
author_email = Mike.Sueberkrueb@md.de
description = Includes multiple utilities for Python
long_description = file: README.md
long_description_content_type = text/markdown
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6
package_dir =
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
load_data = py.typed
splunk = py.typed

[flake8]
max-line-length = 100